{
    "name": "MultiTouches",
    "maps": [
        {
            "name": "touches",
            "id": "327e4482-2820-4255-8e7c-ce34b1543416",
            "actions": [
                {
                    "name": "Finger_1",
                    "type": "Button",
                    "id": "3ec0ee8f-a63d-46f9-889e-02c2300ff53a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Finger_2",
                    "type": "Button",
                    "id": "0e5a1b23-7662-4385-8024-0866150dbb2f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Finger_3",
                    "type": "Button",
                    "id": "cdbbc51c-5919-4c48-a751-f1771568345b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Finger_4",
                    "type": "Button",
                    "id": "f831859e-dc7f-4c27-a8a9-a00978198629",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Finger_5",
                    "type": "Button",
                    "id": "41c7976a-bdc2-4751-9c4b-bc94dd1de85a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Finger_6",
                    "type": "Button",
                    "id": "bfa7d6b7-bd2b-44e8-b80c-4baa960eae2a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Finger_7",
                    "type": "Button",
                    "id": "42b514a2-a555-4068-b3ee-02862e3cb35b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Finger_8",
                    "type": "Button",
                    "id": "da3aec83-a136-4b32-b885-612115e00a0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Finger_9",
                    "type": "Button",
                    "id": "9b033754-8cc6-4128-abfe-a86044f3a36c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Finger_pos_1",
                    "type": "Value",
                    "id": "a0ee07ff-f70c-4bac-a616-8541eb260aee",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Finger_pos_2",
                    "type": "Value",
                    "id": "6f012688-a2dc-4e40-ae1a-f4be6f502bab",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Finger_pos_3",
                    "type": "Value",
                    "id": "84bc4d8c-9a36-4962-baf1-71445db0aa4e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Finger_pos_4",
                    "type": "Value",
                    "id": "7e311a0a-0ab0-4649-a29c-b53c1f1f2b00",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Finger_pos_5",
                    "type": "Value",
                    "id": "00cbff7c-768b-4c3a-a674-6cac293ba8a8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Finger_pos_6",
                    "type": "Value",
                    "id": "475ef65b-96f4-44d1-ab38-28a22012f1fb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Finger_pos_7",
                    "type": "Value",
                    "id": "87bde4e2-6170-4222-99d2-af5683c334be",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Finger_pos_8",
                    "type": "Value",
                    "id": "f8e64f3a-8a72-49a6-b9d6-922128d12a50",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Finger_pos_9",
                    "type": "Value",
                    "id": "a753a74d-9537-41bd-8fb8-892f9ada62ca",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f2e430b0-8ae6-4720-b11c-ac9fdc284d12",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4423982-2f78-4679-9d23-59091fdda4a2",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c24ac759-bb45-4285-a52f-815c2d7a3bfb",
                    "path": "<Touchscreen>/touch2/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5501d860-6550-49d9-b26b-38875b7226ba",
                    "path": "<Touchscreen>/touch3/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger_4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b77b004f-58c6-47e5-88c2-4c380335ed27",
                    "path": "<Touchscreen>/touch4/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger_5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd0c52e7-332c-487f-8ae4-7fd8bd1fcc6f",
                    "path": "<Touchscreen>/touch5/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger_6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "172201df-d6f7-4f9a-a29e-4f19f004a7c3",
                    "path": "<Touchscreen>/touch6/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger_7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6593673-6bf0-4859-a6bd-a10aac5d8e0c",
                    "path": "<Touchscreen>/touch7/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger_8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9bbf87e-dea9-45cc-a2a3-0f02c2197a6c",
                    "path": "<Touchscreen>/touch8/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger_9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15a7e329-8e15-43c2-b2ef-683af5c3daf6",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger_pos_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a83b00f7-5216-43f7-87ae-122a0b2ee91b",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger_pos_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99cecf28-a21d-40ad-a787-ba9b7fd0e01c",
                    "path": "<Touchscreen>/touch2/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger_pos_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "813ed90c-4c01-4324-b52e-ae01bd973ad1",
                    "path": "<Touchscreen>/touch3/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger_pos_4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52bc77b6-4890-4dd6-bbe0-610ab55fe724",
                    "path": "<Touchscreen>/touch4/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger_pos_5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66b2a7c4-f7e0-4eae-a48c-f1df677ebee1",
                    "path": "<Touchscreen>/touch5/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger_pos_6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07463273-5ade-4f50-a9ee-df19ec308d83",
                    "path": "<Touchscreen>/touch6/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger_pos_7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3da1044e-e9b8-4ab2-8192-cde6a2b11004",
                    "path": "<Touchscreen>/touch7/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger_pos_8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d557952-59b8-466c-a54f-39a79b1165ec",
                    "path": "<Touchscreen>/touch8/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger_pos_9",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}